{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 72,
  "lineage": "b72e0a9a-3f6f-d419-2f49-7bed1ec100b9",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:security-group/sg-010215afbe0e6db3f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-010215afbe0e6db3f",
            "ingress": [],
            "name": "aula-k8s-cluster-2025012023104993080000000b",
            "name_prefix": "aula-k8s-cluster-",
            "owner_id": "610636549887",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aula-k8s-cluster"
            },
            "tags_all": {
              "Name": "aula-k8s-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:security-group/sg-0032c8032a5018ac3",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0032c8032a5018ac3",
            "ingress": [],
            "name": "aula-k8s-node-2025012023104993100000000d",
            "name_prefix": "aula-k8s-node-",
            "owner_id": "610636549887",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aula-k8s-node",
              "kubernetes.io/cluster/aula-k8s": "owned"
            },
            "tags_all": {
              "Name": "aula-k8s-node",
              "kubernetes.io/cluster/aula-k8s": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1864432211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010215afbe0e6db3f",
            "security_group_rule_id": "sgr-07be0a718caa7ada1",
            "self": false,
            "source_security_group_id": "sg-0032c8032a5018ac3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1497598455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-040bcc9f030b54546",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3384746532",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-0739efa0c7f210189",
            "self": false,
            "source_security_group_id": "sg-010215afbe0e6db3f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1831036728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-02fff15b40232e870",
            "self": false,
            "source_security_group_id": "sg-010215afbe0e6db3f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2757820590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-07e117ad68ee859ed",
            "self": false,
            "source_security_group_id": "sg-010215afbe0e6db3f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3074243727",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-076c51035837ed513",
            "self": false,
            "source_security_group_id": "sg-010215afbe0e6db3f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3550220100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-060ea3ad1789d416d",
            "self": false,
            "source_security_group_id": "sg-010215afbe0e6db3f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-914685032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-0a18fb9bfaae94996",
            "self": false,
            "source_security_group_id": "sg-010215afbe0e6db3f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-386523678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-03d9916b6cd8834fa",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1076634466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-0c465d55ee8658a0d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3832774797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0032c8032a5018ac3",
            "security_group_rule_id": "sgr-011da98af611a0cc0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:network-acl/acl-08a3911cb5c273da2",
            "default_network_acl_id": "acl-08a3911cb5c273da2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08a3911cb5c273da2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "610636549887",
            "subnet_ids": [
              "subnet-007755454e8fad34a",
              "subnet-055fd67660fee2579",
              "subnet-05b05c3bddd1e1e63",
              "subnet-075e75308116f3c7e",
              "subnet-0d3f88eadee9407ae"
            ],
            "tags": {
              "Name": "minha-vpc-default"
            },
            "tags_all": {
              "Name": "minha-vpc-default"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:route-table/rtb-0c70b69c55a893d98",
            "default_route_table_id": "rtb-0c70b69c55a893d98",
            "id": "rtb-0c70b69c55a893d98",
            "owner_id": "610636549887",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "minha-vpc-default"
            },
            "tags_all": {
              "Name": "minha-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:security-group/sg-03ca1cadf08d303a4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03ca1cadf08d303a4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "610636549887",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "minha-vpc-default"
            },
            "tags_all": {
              "Name": "minha-vpc-default"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bf8356042424cfc",
            "arn": "arn:aws:ec2:us-east-1:610636549887:elastic-ip/eipalloc-07bf8356042424cfc",
            "domain": "vpc",
            "id": "eipalloc-07bf8356042424cfc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-94-70.compute-1.amazonaws.com",
            "public_ip": "3.223.94.70",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "minha-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "minha-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0412f49cf5aecae95",
            "arn": "arn:aws:ec2:us-east-1:610636549887:elastic-ip/eipalloc-0412f49cf5aecae95",
            "domain": "vpc",
            "id": "eipalloc-0412f49cf5aecae95",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-35-249.compute-1.amazonaws.com",
            "public_ip": "44.193.35.249",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "minha-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "minha-vpc-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f0722ba9d1b7be3",
            "arn": "arn:aws:ec2:us-east-1:610636549887:elastic-ip/eipalloc-05f0722ba9d1b7be3",
            "domain": "vpc",
            "id": "eipalloc-05f0722ba9d1b7be3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-86-69-161.compute-1.amazonaws.com",
            "public_ip": "52.86.69.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "minha-vpc-us-east-1c"
            },
            "tags_all": {
              "Name": "minha-vpc-us-east-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:internet-gateway/igw-043e1ee13c3b40549",
            "id": "igw-043e1ee13c3b40549",
            "owner_id": "610636549887",
            "tags": {
              "Name": "minha-vpc"
            },
            "tags_all": {
              "Name": "minha-vpc"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bf8356042424cfc",
            "association_id": "eipassoc-01137a0be2654bed8",
            "connectivity_type": "public",
            "id": "nat-0bcb9a4ebea387465",
            "network_interface_id": "eni-01bd749f55a326b24",
            "private_ip": "10.0.101.89",
            "public_ip": "3.223.94.70",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-055fd67660fee2579",
            "tags": {
              "Name": "minha-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "minha-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0412f49cf5aecae95",
            "association_id": "eipassoc-0809d8844ea9188bc",
            "connectivity_type": "public",
            "id": "nat-0b75b43e34d484e4b",
            "network_interface_id": "eni-03e571aa938dbb158",
            "private_ip": "10.0.102.39",
            "public_ip": "44.193.35.249",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09c589203bb96bf3e",
            "tags": {
              "Name": "minha-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "minha-vpc-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f0722ba9d1b7be3",
            "association_id": "eipassoc-059e11c354b1af706",
            "connectivity_type": "public",
            "id": "nat-0c932c9c0b89d604a",
            "network_interface_id": "eni-0bcd0f1a6b9631ea5",
            "private_ip": "10.0.103.208",
            "public_ip": "52.86.69.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3f88eadee9407ae",
            "tags": {
              "Name": "minha-vpc-us-east-1c"
            },
            "tags_all": {
              "Name": "minha-vpc-us-east-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d770cf6f27443a841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bcb9a4ebea387465",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d770cf6f27443a84",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f18327152726dca31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b75b43e34d484e4b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f18327152726dca3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f139ca5da83c8fdd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c932c9c0b89d604a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f139ca5da83c8fdd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-043e1ee13c3b40549",
            "id": "r-rtb-07e7b6f621f6666911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e7b6f621f666691",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:route-table/rtb-0d770cf6f27443a84",
            "id": "rtb-0d770cf6f27443a84",
            "owner_id": "610636549887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "minha-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "minha-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:route-table/rtb-0f18327152726dca3",
            "id": "rtb-0f18327152726dca3",
            "owner_id": "610636549887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "minha-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "minha-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:route-table/rtb-0f139ca5da83c8fdd",
            "id": "rtb-0f139ca5da83c8fdd",
            "owner_id": "610636549887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "minha-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "minha-vpc-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:route-table/rtb-07e7b6f621f666691",
            "id": "rtb-07e7b6f621f666691",
            "owner_id": "610636549887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "minha-vpc-public"
            },
            "tags_all": {
              "Name": "minha-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0418b15e54bc758ab",
            "route_table_id": "rtb-0d770cf6f27443a84",
            "subnet_id": "subnet-075e75308116f3c7e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb4e18d1882efba5",
            "route_table_id": "rtb-0f18327152726dca3",
            "subnet_id": "subnet-05b05c3bddd1e1e63"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036915ecce48f31b5",
            "route_table_id": "rtb-0f139ca5da83c8fdd",
            "subnet_id": "subnet-007755454e8fad34a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a3778872e5ac5f8",
            "route_table_id": "rtb-07e7b6f621f666691",
            "subnet_id": "subnet-055fd67660fee2579"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068ceab4ea972f6a5",
            "route_table_id": "rtb-07e7b6f621f666691",
            "subnet_id": "subnet-09c589203bb96bf3e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba8e612de29f58bb",
            "route_table_id": "rtb-07e7b6f621f666691",
            "subnet_id": "subnet-0d3f88eadee9407ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:subnet/subnet-075e75308116f3c7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075e75308116f3c7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610636549887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aula-k8s-sub-private",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aula-k8s-sub-private",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:subnet/subnet-05b05c3bddd1e1e63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b05c3bddd1e1e63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610636549887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aula-k8s-sub-private",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aula-k8s-sub-private",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:subnet/subnet-007755454e8fad34a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007755454e8fad34a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610636549887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aula-k8s-sub-private",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aula-k8s-sub-private",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:subnet/subnet-055fd67660fee2579",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055fd67660fee2579",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610636549887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aula-k8s-sub-public",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aula-k8s-sub-public",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:subnet/subnet-09c589203bb96bf3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c589203bb96bf3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610636549887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aula-k8s-sub-public",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aula-k8s-sub-public",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:subnet/subnet-0d3f88eadee9407ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f88eadee9407ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610636549887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aula-k8s-sub-public",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aula-k8s-sub-public",
              "kubernetes.io/cluster/aula-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c39f6a66573e011c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610636549887:vpc/vpc-0c39f6a66573e011c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a3911cb5c273da2",
            "default_route_table_id": "rtb-0c70b69c55a893d98",
            "default_security_group_id": "sg-03ca1cadf08d303a4",
            "dhcp_options_id": "dopt-0019e53f86607eaa0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c39f6a66573e011c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c70b69c55a893d98",
            "owner_id": "610636549887",
            "tags": {
              "Name": "minha-vpc"
            },
            "tags_all": {
              "Name": "minha-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}